fixed footer overlap

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -8,6 +8,7 @@
   margin-right: auto;
   padding-left: 1em;
   padding-right: 1em;
+  margin-bottom: 4em;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   max-width: 100%;
